fix spacing

--- a/src/less/spacing.less
+++ b/src/less/spacing.less
@@ -90,10 +90,10 @@
 .pll { padding-left: @largevalue; }
 
 // padding vertical
-.pvn { .prn; .pln; }
-.pvs { .prs; .pls; }
-.pvm { .prm; .plm; }
-.pvl { .prl; .pll; }
+.pvn { .ptn; .pbn; }
+.pvs { .pts; .pbs; }
+.pvm { .ptm; .pbm; }
+.pvl { .ptl; .pbl; }
 
 // padding horizontal
 .phn { .prn; .pln; }
